--- a/manifest.json
+++ b/manifest.json
@@ -1,83 +1,77 @@
 {
   "name": "Hextris",
-  "id": "hextris.io",
+  "id": "elixtris_zabala",
   "scope": ".",
   "start_url": ".",
   "display": "fullscreen",
   "background_color": "#fffde7",
   "description": "Think Tetris… but on a hexagon, and way more intense.",
-  "icons": [
-    {
-      "src": "images/icons/transparent-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "images/icons/transparent-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "images/icons/transparent-192.webp",
-      "sizes": "192x192",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "images/icons/transparent-512.webp",
-      "sizes": "512x512",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "images/icons/transparent.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
-      "src": "images/icons/maskable-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "images/icons/maskable-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "images/icons/maskable-192.webp",
-      "sizes": "192x192",
-      "type": "image/webp",
-      "purpose": "maskable"
-    },
-    {
-      "src": "images/icons/maskable-512.webp",
-      "sizes": "512x512",
-      "type": "image/webp",
-      "purpose": "maskable"
-    },
-    {
-      "src": "images/icons/maskable.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
+  "icons": [{
+        "src": "images/icons/transparent-192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any"
+    }, {
+        "src": "images/icons/transparent-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any"
+    }, {
+        "src": "images/icons/transparent-192.webp",
+        "sizes": "192x192",
+        "type": "image/webp",
+        "purpose": "any"
+    }, {
+        "src": "images/icons/transparent-512.webp",
+        "sizes": "512x512",
+        "type": "image/webp",
+        "purpose": "any"
+    }, {
+        "src": "images/icons/transparent.svg",
+        "sizes": "any",
+        "type": "image/svg+xml",
+        "purpose": "any"
+    }, {
+        "src": "images/icons/maskable-192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "maskable"
+    }, {
+        "src": "images/icons/maskable-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable"
+    }, {
+        "src": "images/icons/maskable-192.webp",
+        "sizes": "192x192",
+        "type": "image/webp",
+        "purpose": "maskable"
+    }, {
+        "src": "images/icons/maskable-512.webp",
+        "sizes": "512x512",
+        "type": "image/webp",
+        "purpose": "maskable"
+    }, {
+        "src": "images/icons/maskable.svg",
+        "sizes": "any",
+        "type": "image/svg+xml",
+        "purpose": "maskable"
     }
   ],
-  "theme_color": "#c6fff5",
-  "short_name": "Elitrix",
+  "theme_color": "#d7fff7",
+  "short_name": "trix",
   "lang": "es",
-  "orientation": "natural",
+  "orientation": "portrait",
   "categories": [
     "entertainment",
     "games",
     "kids"
   ],
-  "display_override": [
-    "window-controls-overlay"
-  ]
+"screenshots": [
+  {
+    "src": "images/PausaScreenshot.png",
+    "sizes": "1592x765",
+    "type": "image/png"
+  }
+]
 }
